--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </div>
 
 <div id="warning-message">
-  This Entry Form can only be accessed on a Windows PC within your company's network. Please ensure you are using an authorized device.
+  This Entry Form can only be accessed on a PC within your company's network. Please ensure you are using an authorized device.
 </div>
 
 <script>
